--- a/index.html
+++ b/index.html
@@ -87,5 +87,8 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./assets/script.js"></script>  
+
   </body>
 </html>
