--- a/index.html
+++ b/index.html
@@ -78,15 +78,22 @@
                         </div>
                       </div>
                       <!-- modal -->
-                      <div id="modal-js-example" class="modal">
+                      <div class="modal" id="news-popup">
                         <div class="modal-background"></div>
-                      
-                        <div class="modal-content">
-                          <div class="box">
-                            <p>Modal JS example</p>
-                            <!-- Your content -->
-                          </div>
+                        <div class="modal-card">
+                          <header class="modal-card-head">
+                            <p class="modal-card-title">Modal title</p>
+                            <button class="delete" aria-label="close"></button>
+                          </header>
+                          <section class="modal-card-body">
+                            <!-- Content ... -->
+                          </section>
+                          <footer class="modal-card-foot">
+                            <button class="button is-success">Save changes</button>
+                            <button class="button">Cancel</button>
+                          </footer>
                         </div>
+                      </div>
                       
                         <button class="modal-close is-large" aria-label="close"></button>
                       </div>
@@ -96,7 +103,7 @@
                       <!-- <button class="js-modal-trigger" data-target="modal-js-example">
                         Read More
                       </button> -->
-                      <a href="#" class="js-modal-trigger card-footer-item" data-target="modal-js-example">Read more</a>
+                      <a href="#" class="js-modal-trigger card-footer-item" data-target="news-popup">Read more</a>
                     </footer>
                   </div>
             </div>  
