structure of modal

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quasi saepe voluptatum labore id quibusdam dolorum doloremque nulla tempore architecto, natus aspernatur quo obcaecati rem aliquid nobis inventore neque repudiandae?
   
-                        </div>
+                    </div>
                       </div>
                       <!-- modal -->
                       <div class="modal" id="news-popup">
@@ -86,7 +86,8 @@
                             <button class="delete" aria-label="close"></button>
                           </header>
                           <section class="modal-card-body">
-                            <!-- Content ... -->
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quasi saepe voluptatum labore id quibusdam dolorum doloremque nulla tempore architecto, natus aspernatur quo obcaecati rem aliquid nobis inventore neque repudiandae?
                           </section>
                           <footer class="modal-card-foot">
                             <button class="button is-success">Save changes</button>
