--- a/index.html
+++ b/index.html
@@ -85,13 +85,23 @@
                             <p class="modal-card-title">Modal title</p>
                             <button class="delete" aria-label="close"></button>
                           </header>
-                          <section class="modal-card-body">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quasi saepe voluptatum labore id quibusdam dolorum doloremque nulla tempore architecto, natus aspernatur quo obcaecati rem aliquid nobis inventore neque repudiandae?
-                          </section>
+                          <div class="modal-card-body">
+                            <div class="content description">
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quasi saepe voluptatum labore id quibusdam dolorum doloremque nulla tempore architecto, natus aspernatur quo obcaecati rem aliquid nobis inventore neque repudiandae?
+      
+                            </div>
+                          </div>
+                          <div class="modal-card-body">
+                              <div class="content article hide">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quasi saepe voluptatum labore id quibusdam dolorum doloremque nulla tempore architecto, natus aspernatur quo obcaecati rem aliquid nobis inventore neque repudiandae?
+        
+                          </div>
                           <footer class="modal-card-foot">
-                            <button class="button is-success">Save changes</button>
-                            <button class="button">Cancel</button>
+                            <a href="#" class="card-footer-item read-aloud">Play</a>
+                            <a href="#" class="card-footer-item">Link</a>
+                            <a href="#" class="card-footer-item">Favorite</a>
                           </footer>
                         </div>
                       </div>
@@ -100,7 +110,7 @@
                       </div>
                       <!-- mudal -->
                     <footer class="card-footer">
-                      <a href="#" class="card-footer-item">Play</a>
+                      <a href="#" class="card-footer-item read-aloud">Play</a>
                       <!-- <button class="js-modal-trigger" data-target="modal-js-example">
                         Read More
                       </button> -->
