--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- main body -->
   <div class="columns">
     <!-- aside (left side) -->
-    <div class="column is-3 m-3">
+    <div class="column is-3">
       <!-- search box -->
       <div class="box">
         <div class="field">
@@ -52,7 +52,7 @@
             </div>
           </div>
         </div>
-        <button id="search-btn" class="button has-background-info has-text-white" id="searchBtn">Search</button>
+        <button class="button" id="searchBtn">Search</button>
       </div>
       <!-- searh box ends here -->
       <!-- search history  -->
