change to form and submit

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- aside (left side) -->
     <div class="column is-3">
       <!-- search box -->
-      <div class="box">
+      <form class="box" id="searchForm">
         <div class="field">
           <label class="label">Search News</label>
           <div class="control">
@@ -53,8 +53,8 @@
             </div>
           </div>
         </div>
-        <button class="button" id="searchBtn">Search</button>
-      </div>
+        <button type="submit" class="button" id="searchBtn">Search</button>
+      </form>
       <!-- searh box ends here -->
       <!-- search history  -->
       <label class="label">Favorite</label>
