function call restractured to avoid timeing issue , un used HTML commented out and addToFavorite function fixed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             <input class="input" id="searchString" type="text" placeholder="Keyword">
           </div>
         </div>
-
         <div class="field">
           <label class="label">Category</label>
           <div class="control">
@@ -68,7 +67,7 @@
         <div class="column is-9">
             <div class="container newsCardsContainer">
                 <!-- news card -->
-                <div class="card">
+                <!-- <div class="card">
                   <header class="card-header">
                     <p class="card-header-title">
                       Component
@@ -86,9 +85,9 @@
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quasi saepe voluptatum labore id quibusdam dolorum doloremque nulla tempore architecto, natus aspernatur quo obcaecati rem aliquid nobis inventore neque repudiandae?
                     </div>
-                  </div>
+                  </div> -->
  <!-- modal ==Modal========Modal==========================================Modal===============================-->
-                      <div class="modal" id="news-popup">
+                      <!-- <div class="modal" id="news-popup">
                         <div class="modal-background"></div>
                         <div class="modal-card">
                           <header class="modal-card-head">
@@ -114,16 +113,16 @@
                             <a href="#" class="card-footer-item">Favorite</a>
                           </footer>
                           
-                        </div>
+                        </div> -->
                         <!--Modal card closing-->
-                      </div>
+                      <!-- </div> -->
                       
 <!-- ===============================mudal=======================modal========================================================= -->
-                  <footer class="card-footer">
+                  <!-- <footer class="card-footer">
                     <a href="#" class="card-footer-item read-aloud">Play</a>
                     <a href="#" class="js-modal-trigger card-footer-item" data-target="news-popup">Read more</a>
-                  </footer>
-                </div> 
+                  </footer> -->
+                <!-- </div>  -->
                 <!--News card containerc losing-->
             </div>  
             <!-- Content (right side) Closing -->
