added readme and changed category options in HTML

--- a/index.html
+++ b/index.html
@@ -41,13 +41,16 @@
           <div class="control">
             <div id="dropdown" class="select">
               <select id="selectCat">
-                <option value="general">General</option>
+                <option value="top">Top</option>
                 <option value="business">Business</option>
                 <option value="entertainment">Entertainment</option>
-                <option value="health">Health</option>
+                <option value="environment">Environment</option>
+                <option value="food">Food</option>
+                <option value="politics">Politics</option>
                 <option value="science">Science</option>
                 <option value="sports">Sports</option>
                 <option value="technology">Technology</option>
+                <option value="world">World</option>
               </select>
             </div>
           </div>
