Created render function to pull favorited articles from local storage and display them on the screen.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- searh box ends here -->
       <!-- search history  -->
       <label class="label">Favorite</label>
-      <div class="box favorite">
+      <div id="fav-box" class="box favorite">
 
       </div>
     </div>
