adding favorite clear and favorite load buttons

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
       <div id="fav-box" class="box favorite">
 
       </div>
+      <div class="buttons">
+        <button class="button is-info is-rounded is-fullwidth clearFabBtn">load all favorites</button>
+        <button class="button is-warning is-rounded is-fullwidth loadFabBtn">Clear All Favorits</button>
+      </div>
     </div>
     
     <script src="./assets/script.js"></script>
