Added Day.js, CSS, HTMl, etc JavaScript.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
   
   <!-- hero -->
-  <section class="hero is-small has-background-info is-bold">
+  <section id="hero" class="hero is-small has-background-info is-bold">
     <div class="hero-body">
       <p id="hero-title" class="title has-text-white">
         SEND NEWS
       </p>
+      <p id="day-subtitle" class="subtitle has-text-white has-text-centered"></p>
       <!-- <p class="subtitle">
             sub title
           </p> -->
@@ -55,7 +56,9 @@
             </div>
           </div>
         </div>
-        <button type="submit" class="button" id="searchBtn">Search</button>
+        <div class="has-text-centered">
+          <button type="submit" class="button" id="searchBtn">Search</button>
+        </div>
       </form>
       <!-- searh box ends here -->
       <!-- search history  -->
