add event listner to clear Faborite button to clear faborite

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
       </div>
       <div class="buttons">
-        <button class="button is-info is-rounded is-fullwidth clearFabBtn">load all favorites</button>
-        <button class="button is-warning is-rounded is-fullwidth loadFabBtn">Clear All Favorits</button>
+        <button class="button is-info is-rounded is-fullwidth loadFabBtn">load all favorites</button>
+        <button class="button is-warning is-rounded is-fullwidth  clearFabBtn">Clear All Favorits</button>
       </div>
     </div>
     
