expanded ReadMe, added comments to JS, and corrected spelling mistake that appeared on webpage

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       </div>
       <div class="buttons">
-        <button class="button is-warning is-rounded is-fullwidth  clearFabBtn">Clear All Favorits</button>
+        <button class="button is-warning is-rounded is-fullwidth  clearFabBtn">Clear All Favorites</button>
       </div>
     </div>
     
